# Mahjong_Server

./: CMakeLists.txt  Mahjong_Server.sln
MySQLDLL/64/: libmysql.lib
Server/: Server.vcxproj  Server.vcxproj.filters  main.cpp
Server/Character/: Character.cpp  Character.h  CharacterData.cpp  CharacterData.h  CharacterDefine.h  CharacterFactory.h  CharacterFactoryManager.cpp  CharacterFactoryManager.h  CharacterMahjongRobot.h  CharacterManager.cpp  CharacterManager.h  CharacterNPC.h  CharacterPlayer.cpp  CharacterPlayer.h
Server/CommandSystem/: CommandDefine.h  CommandHeader.h  CommandPool.cpp  CommandPool.h  txCommand.cpp  txCommand.h  txCommandReceiver.cpp  txCommandReceiver.h  txCommandSystem.cpp  txCommandSystem.h
Server/CommandSystem/CommandCharacter/: CommandCharacterAskAction.cpp  CommandCharacterAskAction.h  CommandCharacterAskDrop.cpp  CommandCharacterAskDrop.h  CommandCharacterContinueGame.cpp  CommandCharacterContinueGame.h  CommandCharacterDrop.cpp  CommandCharacterDrop.h  CommandCharacterGang.cpp  CommandCharacterGang.h  CommandCharacterGetMahjong.cpp  CommandCharacterGetMahjong.h  CommandCharacterGetStartMahjong.cpp  CommandCharacterGetStartMahjong.h  CommandCharacterHu.cpp  CommandCharacterHu.h  CommandCharacterJoinRoom.cpp  CommandCharacterJoinRoom.h  CommandCharacterLeaveRoom.cpp  CommandCharacterLeaveRoom.h  CommandCharacterMahjongEnd.cpp  CommandCharacterMahjongEnd.h  CommandCharacterNotifyBanker.cpp  CommandCharacterNotifyBanker.h  CommandCharacterNotifyDiceDone.cpp  CommandCharacterNotifyDiceDone.h  CommandCharacterNotifyGetStartDone.cpp  CommandCharacterNotifyGetStartDone.h  CommandCharacterNotifyOtherPlayerAskAction.cpp  CommandCharacterNotifyOtherPlayerAskAction.h  CommandCharacterNotifyOtherPlayerAskDrop.cpp  CommandCharacterNotifyOtherPlayerAskDrop.h  CommandCharacterNotifyOtherPlayerContinueGame.cpp  CommandCharacterNotifyOtherPlayerContinueGame.h  CommandCharacterNotifyOtherPlayerDrop.cpp  CommandCharacterNotifyOtherPlayerDrop.h  CommandCharacterNotifyOtherPlayerGang.cpp  CommandCharacterNotifyOtherPlayerGang.h  CommandCharacterNotifyOtherPlayerGetMahjong.cpp  CommandCharacterNotifyOtherPlayerGetMahjong.h  (+36 more)
Server/CommandSystem/CommandCharacterManager/: CommandCharacterManagerCreateCharacter.cpp  CommandCharacterManagerCreateCharacter.h  CommandCharacterManagerDestroyCharacter.cpp  CommandCharacterManagerDestroyCharacter.h  CommandCharacterManagerNotifyPlayerOffline.cpp  CommandCharacterManagerNotifyPlayerOffline.h  CommandCharacterManagerPlayerLogin.cpp  CommandCharacterManagerPlayerLogin.h  CommandCharacterManagerRobotLogin.cpp  CommandCharacterManagerRobotLogin.h
Server/CommandSystem/CommandRoom/: CommandRoomConfirmAction.cpp  CommandRoomConfirmAction.h  CommandRoomNotifyDiceDone.cpp  CommandRoomNotifyDiceDone.h  CommandRoomNotifyPlayerContinueGame.cpp  CommandRoomNotifyPlayerContinueGame.h  CommandRoomNotifyPlayerJoin.cpp  CommandRoomNotifyPlayerJoin.h  CommandRoomNotifyPlayerLeave.cpp  CommandRoomNotifyPlayerLeave.h  CommandRoomNotifyPlayerOffline.cpp  CommandRoomNotifyPlayerOffline.h  CommandRoomNotifyPlayerReady.cpp  CommandRoomNotifyPlayerReady.h  CommandRoomPlayerLeave.cpp  CommandRoomPlayerLeave.h  CommandRoomPlayerReady.cpp  CommandRoomPlayerReady.h  CommandRoomRequestDrop.cpp  CommandRoomRequestDrop.h  CommandRoomStartGame.cpp  CommandRoomStartGame.h
Server/CommandSystem/CommandRoomManager/: CommandRoomManagerCreateRoom.cpp  CommandRoomManagerCreateRoom.h  CommandRoomManagerDestroyRoom.h  CommandRoomManagerNotifyPlayerOffline.cpp  CommandRoomManagerNotifyPlayerOffline.h
Server/CommandSystem/CommandServer/: CommandServerNotifyAcceptedClient.cpp  CommandServerNotifyAcceptedClient.h
Server/Common/: GameDefine.h  GameLog.cpp  GameLog.h  ServerBase.cpp  ServerBase.h  ServerCallback.h  ServerConfig.cpp  ServerConfig.h  ServerDefine.h  ServerEnum.h  ServerUtility.cpp  ServerUtility.h  txFactoryManager.h  txMap.h  txMemeryTrace.cpp  txMemeryTrace.h  txSTLBase.h  txSerializedData.cpp  txSerializedData.h  txSerializer.cpp  txSerializer.h  txSet.h  txShareMemeryServer.cpp  txShareMemeryServer.h  txThreadLock.cpp  txThreadLock.h  txUtility.cpp  txUtility.h  txVector.h
Server/Component/: txComponentFactory.h  txComponentFactoryManager.cpp  txComponentFactoryManager.h  txComponentHeader.h  txComponentOwner.cpp  txComponentOwner.h
Server/Component/BaseComponent/: txComponent.cpp  (+1 more)
Server/DataBase/: Data.h  DataBase.cpp  DataBase.h  DataDefine.h  DataFactory.h  DataPlayerInfo.h  MySQLDataBase.cpp  MySQLDataBase.h
Server/DebugSystem/: DebugSystem.cpp  DebugSystem.h
Server/FileSystem/: txDataElem.cpp  txDataElem.h  txDataManager.cpp  txDataManager.h
Server/Log/: GameLog.cpp  GameLog.h  GameLogWrap.cpp  GameLogWrap.h
Server/MahjongRobot/: MahjongRobotManager.cpp  MahjongRobotManager.h
Server/Memory/: MemoryDefine.h  MemoryInfo.h  txMemoryCheck.cpp  txMemoryCheck.h  txMemoryTrace.cpp  txMemoryTrace.h  txShareMemoryServer.cpp  txShareMemoryServer.h
Server/Net/: NetClient.cpp  NetClient.h  NetManagerClient.cpp  NetManagerClient.h  NetManagerServer.cpp  NetManagerServer.h  NetServer.cpp  NetServer.h
Server/Room/: HuInfo.h  MahjongAction.h  Room.cpp  Room.h  RoomManager.cpp  RoomManager.h  WaitActionInfo.h
Server/STL/: txMap.h  txSTLBase.h  txSet.h  txVector.h
Server/Serialize/: txSerializedData.cpp  txSerializedData.h  txSerializer.cpp  txSerializer.h
Server/ServerFramework/: ServerFramework.cpp  ServerFramework.h
Server/Socket/: PacketDefine.h  PacketFactory.h  PacketFactoryManager.cpp  PacketFactoryManager.h
Server/Thread/: CustomThread.cpp  CustomThread.h  ThreadLock.cpp  ThreadLock.h  TimeLock.cpp  TimeLock.h
Server/Utility/: BinaryUtility.cpp  BinaryUtility.h  FileUtility.cpp  ServerUtility.cpp  ServerUtility.h  StringUtility.h  SystemUtility.cpp  SystemUtility.h  Utility.h  txFileUtility.cpp  txFileUtility.h  txMathUtility.cpp  txMathUtility.h  txStringUtility.cpp  txStringUtility.h  txUtility.cpp  txUtility.h
media/Config/: GameFloatConfig.txt  GameStringConfig.txt
media/GameDataFile/: DataPlayerInfo.table
(+369 files in other folders)
